# Liverpool_SUSY_Ana

./: ._submit.py  .asetup.save  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  README.txt  add_new_campaign.py  data.sh  gitlab-ci.yml  listsubmission.py  mySetup.sh  newsubmit.py  setup.sh  submit.py
CI/: release_setup.sh
HistFitter_running/: Histfitter_setup.sh  OneLbb_MVA_CutAndCount_Output_hypotest__1_harvest_list.json  OneLbb_MVA_Fit_Output_hypotest__1_harvest_list.json  makeContour.sh  makeContour_FitBoth.sh  makeContour_FitXGB.sh  outputGraphs.root.expectedSurface.pkl
HistFitter_running/OneLbb/: MyConfigExample.py~  OneLbb.py  OneLbb_Cut&Count.py  OneLbb_MVA.py  OneLbb_MVA.py~  OneLbb_MVA_DISC.py
HistFitter_running/_60_jsons/: OneLbb_MVA_Both_Output_hypotest__1_harvest_list.json  OneLbb_MVA_CutAndCount_Output_hypotest__1_harvest_list.json  OneLbb_MVA_OneBin_Output_hypotest__1_harvest_list.json  OneLbb_MVA_metsig_Output_hypotest__1_harvest_list.json
HistFitter_running/data/: OneLbb_MVA_CutAndCount.root  OneLbb_MVA_Fit.root
HistFitter_running/jsons/: OneLbb_MVA_Both_HF_MaxStat_Output_hypotest__1_harvest_list.json  OneLbb_MVA_Both_HFscaled_opt_Output_hypotest__1_harvest_list.json  OneLbb_MVA_Fit_10bin_Output_HF_MaxStat_hypotest__1_harvest_list.json  OneLbb_MVA_Fit_10bin_S_12_Output_hypotest__1_harvest_list.json
HistFitter_running/results/: OneLbb_MVA_Fit_Output.root  OneLbb_MVA_Fit_Output_hypotest.root
WorkDir/: ._listsubmission.py  .asetup.save  CMakeLists.txt  Dockerfile_WIP
WorkDir/NewMT2/: CMakeLists.txt  CMakeLists.txt~
WorkDir/NewMT2/NewMT2/: MT2.h
WorkDir/NewMT2/Root/: MT2.cxx
athena/Projects/WorkDir/RestFrames/: CMakeLists.txt
athena/Projects/WorkDir/RestFrames/RestFrames/: CombinatoricGroup.h  CombinatoricJigsaw.h  CombinatoricState.h  FrameLink.h  GDecayFrame.h  GFrame.h  Group.h  InvisibleJigsaw.h  InvisibleMassJigsaw.h  Jigsaw.h  MinimizeMassesCombinatoricJigsaw.h  RDecayFrame.h  RFrame.h  RestFrame.h  RestFrameList.h  State.h
athena/Projects/WorkDir/RestFrames/Root/: CombinatoricGroup.cxx  CombinatoricJigsaw.cxx  CombinatoricState.cxx  DecayFrame.cxx  GDecayFrame.cxx  GFrame.cxx  GInvisibleFrame.cxx  GLabFrame.cxx  GVisibleFrame.cxx  Group.cxx  GroupList.cxx  InvisibleFrame.cxx  InvisibleMassJigsaw.cxx  InvisibleState.cxx  Jigsaw.cxx  LabFrame.cxx  NVisibleMInvisibleJigsaw.cxx  RDecayFrame.cxx  RFrame.cxx  RLabFrame.cxx  RestFrame.cxx  RestFrameList.cxx
run/: MyAnalysis
running/: gridRunner_SUSY5.sh  listsubmission.py  listsubmission.sh  newsubmit.py  submit.py
(+1499 files in other folders)
